--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -27,28 +27,34 @@ body {
 }
 .answers {
     padding:1em;
-    background:#f5f5f5;
-    -webkit-border-radius:20px;
-    -moz-border-radius:20px;
+    margin:2em 0;
 }
 .answer {
     margin:1em;
-    font-size:20px;
+    background:#f5f5f5;
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+    display:inline-block;
+    padding:1em 2em;
+    font-size:18px;
+    cursor: pointer;
+    -webkit-box-shadow:0 0 2px #ccc;
+    -moz-box-shadow:0 0 2px #ccc;
+}
+.selected {
+    animation: .25s ease-in-out 0s 1 fadeIn;
+    background:#ee2200;
+    color:#fff;
 }
 .result {
     animation: .5s ease-in-out 0s 1 fadeIn;
     font-size:20px;
 }
-.correct {
-    color:#22dd00;
-}
-.wrong {
-    color:#ee0000;
-}
 h2 {
-    border-left:3px solid #000;
+    border-left:5px solid #ee2200;
+    padding: 1.5em 0;
     padding-left:1em;
-    line-height:2.5em;
+    line-height:1.2em;
     font-size:22px;
 }
 button {
@@ -57,10 +63,18 @@ button {
     cursor: pointer;
     margin:1em 0;
     background:#fff;
+    color:#ee2200;
     border:none;
-    -webkit-box-shadow:0 0 0 1px #ccc;
-    -moz-box-shadow:0 0 0 1px #ccc;
-    padding:10px 15px;
-    -webkit-border-radius:3px;
-    -moz-border-radius:3px;
+    -webkit-box-shadow:0 0 2px #ee0000;
+    -moz-box-shadow:0 0 2px #ee0000;
+    padding:15px 25px;
+    -webkit-border-radius:5px;
+    -moz-border-radius:5px;
+    -webkit-transition:.25s;
+    -moz-transition:.25s;
+}
+button:hover {
+    padding:15px 35px;
+    color:#ee2200;
+    background:#fff;
 }
