--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -6,6 +6,15 @@
       opacity: 1;
     }
 }
+
+@keyframes changecolor {
+    0% {
+      color:#000;
+    }
+    100% {
+      color: #ee4400;
+    }
+}
   
 body {
     background:#fff;
@@ -13,7 +22,31 @@ body {
     margin:0;
     padding:0;
     font-size:16px;
-    animation: .5s ease-in-out 0s 1 fadeIn;
+    animation: 1s ease-in-out 0s 1 fadeIn;
+}
+.title {
+    cursor: default;
+    animation: changecolor 1s alternate infinite;
+    letter-spacing: -3px;
+    font-size:48px;
+}
+.loading {
+    position:fixed;
+    display:flex;
+    flex-flow:column;
+    justify-content: center;
+    align-items: center;
+    background:#fff;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    height:100vh;
+    width:100vw;
+}
+.loading .title {
+    font-size:8em;
+    line-height:0;
 }
 .container {
     display:flex;
@@ -23,7 +56,14 @@ body {
     min-height:100vh;
 }
 .mqa {
-    animation: .5s ease-in-out 0s 1 fadeIn;
+    animation: 1s ease-in-out 0s 1 fadeIn;
+}
+.mqa h2 {
+    border-left:5px solid #ee2200;
+    padding: 1.5em 0;
+    padding-left:1em;
+    line-height:1.2em;
+    font-size:22px;
 }
 .answers {
     padding:1em;
@@ -31,18 +71,20 @@ body {
 }
 .answer {
     margin:1em;
-    background:#f5f5f5;
-    -webkit-border-radius:10px;
-    -moz-border-radius:10px;
+    background:#fff;
+    border-radius:50px;
     display:inline-block;
     padding:1em 2em;
     font-size:18px;
     cursor: pointer;
-    -webkit-box-shadow:0 0 2px #ccc;
-    -moz-box-shadow:0 0 2px #ccc;
+    box-shadow:0 0 2px #ccc;
+    transition:.25s;
+}
+.answer:hover {
+    background:#ee2200;
+    color:#fff;
 }
 .selected {
-    animation: .25s ease-in-out 0s 1 fadeIn;
     background:#ee2200;
     color:#fff;
 }
@@ -50,12 +92,9 @@ body {
     animation: .5s ease-in-out 0s 1 fadeIn;
     font-size:20px;
 }
-h2 {
-    border-left:5px solid #ee2200;
-    padding: 1.5em 0;
-    padding-left:1em;
-    line-height:1.2em;
-    font-size:22px;
+.button_body {
+    display:flex;
+    justify-content: center;
 }
 button {
     font-size:16px;
@@ -65,13 +104,10 @@ button {
     background:#fff;
     color:#ee2200;
     border:none;
-    -webkit-box-shadow:0 0 2px #ee0000;
-    -moz-box-shadow:0 0 2px #ee0000;
+    box-shadow:0 0 2px #ee0000;
     padding:15px 25px;
-    -webkit-border-radius:5px;
-    -moz-border-radius:5px;
-    -webkit-transition:.25s;
-    -moz-transition:.25s;
+    border-radius:5px;
+    transition:.25s;
 }
 button:hover {
     padding:15px 35px;
