--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -12,7 +12,7 @@
       color:#000;
     }
     100% {
-      color: #ee4400;
+      color: #ee2200;
     }
 }
   
@@ -78,7 +78,7 @@ body {
     font-size:18px;
     cursor: pointer;
     box-shadow:0 0 2px #ccc;
-    transition:.25s;
+    transition:.25s ease-in-out;
 }
 .answer:hover {
     background:#ee2200;
@@ -107,7 +107,7 @@ button {
     box-shadow:0 0 2px #ee0000;
     padding:15px 25px;
     border-radius:5px;
-    transition:.25s;
+    transition:.25s ease-in-out;
 }
 button:hover {
     padding:15px 35px;
