--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -1,18 +1,27 @@
 @keyframes fadeIn {
     0% {
-      opacity: 0;
+        opacity: 0;
     }
     100% {
-      opacity: 1;
+        opacity: 1;
+    }
+}
+
+@keyframes fade {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
     }
 }
 
 @keyframes changecolor {
     0% {
-      color:#000;
+        color:#000;
     }
     100% {
-      color: #ee2200;
+        color: #ee2200;
     }
 }
   
@@ -56,7 +65,8 @@ body {
     min-height:100vh;
 }
 .mqa {
-    animation: 1s ease-in-out 0s 1 fadeIn;
+    max-width:80%;
+    animation: .6s ease-in-out 0s 1 fadeIn;
 }
 .mqa h2 {
     border-left:5px solid #ee2200;
@@ -64,6 +74,9 @@ body {
     padding-left:1em;
     line-height:1.2em;
     font-size:22px;
+}
+.mqa_fade {
+    animation: fade .6s alternate 1;
 }
 .answers {
     padding:1em;
@@ -78,7 +91,7 @@ body {
     font-size:18px;
     cursor: pointer;
     box-shadow:0 0 2px #ccc;
-    transition:.25s ease-in-out;
+    transition:.15s ease-in-out;
 }
 .answer:hover {
     background:#ee2200;
@@ -91,10 +104,13 @@ body {
 .result {
     animation: .5s ease-in-out 0s 1 fadeIn;
     font-size:20px;
+    display:flex;
+    flex-flow:column;
 }
 .button_body {
     display:flex;
     justify-content: center;
+    margin:1em 0;
 }
 button {
     font-size:16px;
